--- a/mystyle.css
+++ b/mystyle.css
@@ -3,6 +3,11 @@
 body {
     background: floralwhite
 }
+
+.mainText{
+    font-size: 18px;
+    font-family:Arial;
+}
 .sidenav {
     height: 100%;
     width: 200px;
