--- a/mystyle.css
+++ b/mystyle.css
@@ -52,6 +52,13 @@ body {
     background-color: floralwhite;
 }
 
+#engagement {
+    padding-left: 10px;
+    height:500px;
+    width:750px;
+    float:left;
+}
+
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
